--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="the Wardanan's Wedding">
+    <meta name="author" content="bentukcinta">
+
+    <meta property="og:title" content="The Wardanan's Wedding" />
+    <meta property="og:url" content="https://wardanan.co" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://wardanan.co/img/og-image.png" />
+    <meta property="og:description" content="Wedding Invitation">
+
     <title>The Wardanan's Wedding</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
