--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="author" content="bentukcinta">
 
     <meta property="og:title" content="The Wardanan's Wedding" />
-    <meta property="og:url" content="https://wardanan.co" />
+    <meta property="og:url" content="https://thewardanan.co" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://wardanan.co/img/og-image.png" />
+    <meta property="og:image" content="https://thewardanan.co/img/og-image.png" />
     <meta property="og:description" content="Wedding Invitation">
 
     <title>The Wardanan's Wedding</title>
