--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                                 <img src="img/dress.svg" width="24px" height="24px" alt="no piggy" />
                             </div>
                             <div class="col">
-                                anything but no white
+                                No white please
                             </div>
                         </div>
                     </div>
