--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <div class="container-sm terms-container">
                         <div class="row align-items-center pb-3">
                             <div class="col terms-icon-container">
-                                <img src="img/piggy.svg" width="24px" height="24px" alt="no piggy" />
+                                <img src="img/no-gift.svg" width="24px" height="24px" alt="no piggy" />
                             </div>
                             <div class="col">
                                 do not feel obligate to bring any gifts to our wedding, your presence itself is already a gift for us
@@ -152,7 +152,7 @@
       </div>
 
     <script>
-        var form = document.getElementById('sheetdb-form');
+    var form = document.getElementById('sheetdb-form');
     form.addEventListener("submit", e => {
       e.preventDefault();
       fetch(form.action, {
